kwebkitpart is no more needed
git-svn-id: file:///srv/repos/svn-packages/svn@108178 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdenetwork/trunk/PKGBUILD
+++ b/kdenetwork/trunk/PKGBUILD
@@ -19,7 +19,7 @@ groups=('kde' 'kdenetwork')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'speex' 'ortp' 'libotr'
 	'qca-ossl' 'kdebase-workspace' 'kdebase-lib' 'libvncserver' 'libmsn'
 	'ppp' 'v4l-utils' 'libidn' 'rdesktop' 'qimageblitz' 'libxdamage' 'libgadu'
-	'telepathy-qt4' 'docbook-xsl' 'libktorrent' 'kwebkitpart')
+	'telepathy-qt4' 'docbook-xsl' 'libktorrent')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 sha1sums=('c69dcc48c8fc4064e183136b6d85e6379978925f')
 
@@ -54,7 +54,7 @@ package_kdenetwork-kdnssd() {
 
 package_kdenetwork-kget() {
 	pkgdesc='Download Manager'
-	depends=('kdebase-workspace' 'kdebase-lib' 'libktorrent' 'kwebkitpart')
+	depends=('kdebase-workspace' 'kdebase-lib' 'libktorrent')
 	optdepends=('python2: YouTube plugin')
 	url="http://kde.org/applications/internet/kget/"
 	install='kdenetwork.install'
