upgpkg: xournal 0.4.5-4 poppler 0.16 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@108182 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xournal/trunk/PKGBUILD
+++ b/xournal/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xournal
 pkgver=0.4.5
-pkgrel=3
+pkgrel=4
 pkgdesc='Notetaking and sketching application'
 arch=('i686' 'x86_64')
 url='http://xournal.sourceforge.net/'
@@ -19,13 +19,13 @@ sha1sums=('390cb275774469ed1b04b7268dd625bd456c895e'
 
 
 build() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
-	patch -p1 < ../pdf-export-64.patchg # from xournal CVS, see FS#21693
-	./configure --prefix=/usr
-	make
+    cd "${srcdir}/${pkgname}-${pkgver}"
+    patch -p1 < ../pdf-export-64.patch # from xournal CVS, see FS#21693
+    ./configure --prefix=/usr
+    make
 }
 
 package() {
-	cd "${srcdir}/${pkgname}-${pkgver}"
-	make DESTDIR="${pkgdir}" install desktop-install
+    cd "${srcdir}/${pkgname}-${pkgver}"
+    make DESTDIR="${pkgdir}" install desktop-install
 }
