upgpkg: kdepim-runtime 4.5.94.1-2 remove translations to fix conflicts (FS#22628)
git-svn-id: file:///srv/repos/svn-packages/svn@108227 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-unstable/PKGBUILD
+++ b/kde-unstable/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=kdepim-runtime
 pkgver=4.5.94.1
-pkgrel=1
+pkgrel=2
 pkgdesc='KDE PIM Runtime Environment'
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -13,11 +13,16 @@ depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 install=${pkgname}.install
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/kdepim/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('f226165cd7f92524be354329097e5009b5754046')
+source=("http://download.kde.org/unstable/kdepim/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
+        'disable-l10n.patch')
+sha1sums=('f226165cd7f92524be354329097e5009b5754046'
+        '991d81435205185dcb2285a6e728f7756ae92b0d')
 
 build() {
-	cd $srcdir
+	cd "${srcdir}"/${pkgname}-${pkgver}
+    patch -Np0 -i ${srcdir}/disable-l10n.patch
+
+    cd "${srcdir}"
 	mkdir build
 	cd build
 	cmake ../${pkgname}-${pkgver} \
