--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 pkgname=lynx
 pkgver=2.8.7
 _pkgver=2-8-7
-pkgrel=3
+pkgrel=4
 pkgdesc="A text browser for the World Wide Web"
 url="http://lynx.isc.org/"
 arch=(i686 x86_64)
@@ -22,6 +22,7 @@ build() {
     --sysconfdir=/etc \
     --with-ssl \
     --enable-nls \
+    --enable-ipv6 \
     --mandir=/usr/share/man
   make
 }
