--- a/bluez-hcidump/trunk/PKGBUILD
+++ b/bluez-hcidump/trunk/PKGBUILD
@@ -1,22 +1,26 @@
-# Maintainer: Geoffroy carrier <geoffroy@archlinux.org>
+# $Id$
+# Maintainer: Andrea Scarpino <andrea@archlinux.org>
+# Contributor: Geoffroy carrier <geoffroy@archlinux.org>
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
-# Contributor: Joerie de Gram <j.de.gram@gmail.com>
 
 pkgname=bluez-hcidump
-pkgver=1.42
-pkgrel=2
+pkgver=2.0
+pkgrel=1
 pkgdesc="Bluetooth HCI package analyzer"
 url="http://www.bluez.org/"
 arch=('i686' 'x86_64')
 license=('GPL2')
-depends=('bluez>=4.18')
-source=(http://bluez.sf.net/download/${pkgname}-${pkgver}.tar.gz)
+depends=('glibc' 'bluez')
+source=(http://www.kernel.org/pub/linux/bluetooth/${pkgname}-${pkgver}.tar.gz)
+md5sums=('5c2e3ef0a68b2845047867ba51ff8ac9')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --mandir=/usr/share/man || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+  ./configure --prefix=/usr
+  make
 }
 
-md5sums=('5704737aaf72104eeaf77335218a1827')
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
+}
