upgpkg: kdepim 4.5.94.1-2 remove translations to fix conflicts (FS#22628)
git-svn-id: file:///srv/repos/svn-packages/svn@108250 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepim/kde-unstable/PKGBUILD
+++ b/kdepim/kde-unstable/PKGBUILD
@@ -21,7 +21,7 @@ pkgname=('kdepim-akonadiconsole'
          'kdepim-libkdepim'
          'kdepim-wizards')
 pkgver=4.5.94.1
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url='http://pim.kde.org'
 license=('GPL' 'LGPL' 'FDL')
@@ -29,11 +29,16 @@ groups=('kde' 'kdepim')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'libxss'
 	'pilot-link' 'kde-agent' 'docbook-xsl')
 #source=("http://download.kde.org/unstable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-source=("http://download.kde.org/unstable/${pkgbase}/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('0243aa59c3acd9c38403b3acddb33c22c9c39c65')
+source=("http://download.kde.org/unstable/${pkgbase}/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
+        'disable-l10n.patch')
+sha1sums=('0243aa59c3acd9c38403b3acddb33c22c9c39c65'
+        '25e36f160ced051268e59fad6ed2de33a9c7657a')
 
 build() {
-	cd ${srcdir}
+    cd "${srcdir}"/${pkgbase}-${pkgver}
+    patch -Np0 -i "${srcdir}"/disable-l10n.patch
+
+	cd "${srcdir}"
 	mkdir build
 	cd build
 	cmake ../${pkgbase}-${pkgver} \
