upgpkg: inkscape 0.48.0-5 poppler rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@108251 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/inkscape/trunk/PKGBUILD
+++ b/inkscape/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=inkscape
 pkgver=0.48.0
-pkgrel=4
+pkgrel=5
 pkgdesc='Vector graphics editor using the SVG file format'
 url='http://inkscape.sourceforge.net/'
 arch=('i686' 'x86_64')
@@ -16,11 +16,15 @@ optdepends=('python-numpy: some extensions'
             'python-lxml: some extensions and filters')
 options=('!libtool')
 install=inkscape.install
-source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-sha1sums=('220ade981069a91d3afab9cbff75f65c75119da2')
+source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz"
+	inkscape-0.48.0-poppler.patch)
+md5sums=('bb94543b813157d83281657a89465d46'
+         'fa6eae3c40bf4560ee8ab7cb843b19da')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  # patch for poppler from Fedora
+  patch -Np1 -i ${srcdir}/inkscape-0.48.0-poppler.patch
   ./configure --prefix=/usr \
     --with-python \
     --with-perl \
