upgpkg: libreoffice 3.3.0.4-2 poppler rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@108293 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -5,9 +5,9 @@ pkgbase="libreoffice"
 pkgname=('libreoffice' 'libreoffice-sdk' 'libreoffice-extension-nlpsolver' 'libreoffice-extension-pdfimport' 'libreoffice-extension-presentation-minimizer' 'libreoffice-extension-presenter-screen' 
          'libreoffice-extension-report-builder' 'libreoffice-extension-wiki-publisher' 'libreoffice-extension-ct2n' 'libreoffice-extension-hunart' 'libreoffice-extension-numbertext'
 	 'libreoffice-extension-oooblogger' 'libreoffice-extension-typo' 'libreoffice-extension-watch-window' 'libreoffice-extension-diagram')
-_LOver=3.3.0.4 # = 3.3.0-RC4
+_LOver=3.3.0.4 # = 3.3.0-RC4 = FINAL !!!
 pkgver=${_LOver}
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 _LO_tree="3.3"
 _OFFICEUPD="330"
