--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfdesktop
-pkgver=4.8.0
+pkgver=4.8.1
 pkgrel=1
 pkgdesc="A desktop manager for Xfce"
 arch=('i686' 'x86_64')
@@ -11,14 +11,14 @@ license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
 depends=('libxfce4ui' 'thunar>=1.2.0' 'hicolor-icon-theme' 'libwnck>=2.30.0')
-makedepends=("xfce4-panel>=4.8.0" 'pkgconfig' 'intltool')
+makedepends=("xfce4-panel>=4.8.0" 'intltool')
 optdepends=('xfce4-panel: panel menu plugin')
 conflicts=('xfce4-menueditor')
 replaces=('xfce4-menueditor')
 options=('!libtool')
 install=xfdesktop.install
 source=(http://archive.xfce.org/src/xfce/${pkgname}/4.8/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('828223bc0a2b311b2f6aa529b1b7a87d')
+md5sums=('a3a255cc7756ddc2a0a6fdee9fb8b2c9')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
