--- a/nicotine/trunk/PKGBUILD
+++ b/nicotine/trunk/PKGBUILD
@@ -1,10 +1,11 @@
 # $Id$
-# Maintainer: Hugo Doria <hugo@archlinux.org>
+# Maintainer: Angel Velasquez <angvp@archlinux.org>
+# Contributor: Hugo Doria <hugo@archlinux.org>
 # Contributor: Andrew Wright <andreww@photism.org>
 
 pkgname=nicotine
 pkgver=1.2.16
-pkgrel=1
+pkgrel=2
 pkgdesc="Soulseek music-sharing client, written in python"
 license=('GPL')
 arch=('i686' 'x86_64')
@@ -19,6 +20,7 @@ md5sums=('ac7433c21ef619a37e079a7ae68da94a')
 
 build() {
   cd ${srcdir}/${pkgname}+-${pkgver}
+  sed -i -e "s/Icon=nicotine-plus/Icon=nicotine-plus-32px/" files/nicotine.desktop # Fixing FS#22476
   python2 setup.py install --root=${pkgdir}
   cd trayicon
   python2 autogen.py
