--- a/gnokii/trunk/PKGBUILD
+++ b/gnokii/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=gnokii
 pkgver=0.6.29
-pkgrel=2
+pkgrel=3
 pkgdesc="Tools and user space driver for use with mobile phones"
 arch=('i686' 'x86_64')
 url="http://www.gnokii.org/"
@@ -17,7 +17,7 @@ optdepends=('gtk2: xgnokii GUI'
 	    'postgresql-libs: smsd postgresql backend')
 backup=('etc/gnokiirc')
 options=('!libtool' '!makeflags')
-source=(http://www.gnokii.org/download/$pkgname/$pkgname-${pkgver}.tar.bz2
+source=(http://www.gnokii.org/download/gnokii/0.6.x/$pkgname-${pkgver}.tar.bz2
 	'gnokii.patch')
 md5sums=('6111e0158a1129062bda6420db67c313'
          '4d764727686ee34bc73489c8b1321c82')
