--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=git
-pkgver=1.7.3.5
-pkgrel=2
+pkgver=1.7.4
+pkgrel=1
 pkgdesc="the fast distributed version control system"
 arch=(i686 x86_64)
 url="http://git-scm.com/"
@@ -24,6 +24,7 @@ source=("http://kernel.org/pub/software/scm/git/${pkgname}-${pkgver}.tar.bz2" \
         "http://kernel.org/pub/software/scm/git/git-manpages-${pkgver}.tar.bz2"
         git-daemon
         git-daemon.conf)
+changelog=ChangeLog
 
 build() {
   export PYTHON_PATH='/usr/bin/python2'
@@ -68,11 +69,11 @@ package() {
   install -D -m644 $srcdir/git-daemon.conf $pkgdir/etc/conf.d/git-daemon.conf
 }
 
-md5sums=('8a8cd93b8a4dff0a03c0fdc77253af3e'
-         '75d9db900fbbde05cdd6d30da6e4f1f5'
+md5sums=('fa24dc1ef0b663327ea0fe1981365b39'
+         'd13d42846a72335eb287e55bc980dc09'
          '8e2648910fd5dd4f1c41d3c7fa9e9156'
          '2e42bf97779a1c6411d89043334c9e78')
-sha256sums=('41682e4c13b43591b61a96b6f7a549b24863f62dfc4a917b6147c8e708e288a6'
-            '7b14eff2e06f3de2b6f6b5fbab730fd204324b394b7bf7cc7b776f7edb220769'
+sha256sums=('8e260b9e5dfb46a35f26e3db450c2dabb4d1df254bfb2820779945a1ecbcef51'
+            '883781c0513dde0af30e32d319b34035fbf8e766eb39fbe9f715794c1049865a'
             '2e0a50bdaf8f387a499895e1c204bff78244eaa72b78187c8a84ef40c0b82598'
             'e8bfe29d8393d2b87517c4dd56ea834b213aa00bf3d7fcde4ead3457cadbbc68')
