--- a/postgresql/trunk/PKGBUILD
+++ b/postgresql/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
-# Maintainer: Douglas Soares de Andrade <douglas@archlinux.org>
+# Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgbase=postgresql
 pkgname=('postgresql-libs' 'postgresql-docs' 'postgresql')
-pkgver=9.0.2
-pkgrel=2
+pkgver=9.0.3
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.postgresql.org"
 license=('custom:PostgreSQL')
@@ -128,8 +128,8 @@ package_postgresql() {
     "${pkgdir}/etc/logrotate.d/postgresql"
 }
 
-md5sums=('fc79ef32b602f75f2ccd37647bc008e9'
-         'b680a067894c2ecb6cce93fb78b9ef0c'
+md5sums=('928df8c40bb012ad10756e58b70516fb'
+         '49bfa0d1089e26e2098d362ca5fa6503'
          'd63a05943cf0a2726aa2070f3033c569'
          '4d74f4227dc5e12bf95b3490758d86c9'
          '96f82c38f3f540b53f3e5144900acf17'
