--- a/memcached/trunk/PKGBUILD
+++ b/memcached/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=memcached
 pkgver=1.4.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A distributed memory object caching system"
 arch=(i686 x86_64)
 url="http://memcached.org/"
@@ -13,17 +13,20 @@ optdepends=('perl: for memcached-tool usage')
 backup=('etc/conf.d/memcached')
 source=(http://memcached.googlecode.com/files/$pkgname-$pkgver.tar.gz
         memcached.conf
-        memcached.sh)
+        memcached.sh
+        fix-type-punning-issues.patch)
+changelog=ChangeLog
 
 build() {
   cd $srcdir/$pkgname-$pkgver
+  patch -Np1 < $srcdir/fix-type-punning-issues.patch
   ./configure --prefix=/usr
-  make || return 1
+  make
 }
 
 package() {
   cd $srcdir/$pkgname-$pkgver
-  make DESTDIR=$pkgdir install || return 1
+  make DESTDIR=$pkgdir install
   install -D -m 755 scripts/memcached-tool $pkgdir/usr/bin/memcached-tool
   install -D -m 644 $srcdir/$pkgname.conf $pkgdir/etc/conf.d/$pkgname
   install -D -m 755 $srcdir/$pkgname.sh $pkgdir/etc/rc.d/$pkgname
@@ -31,4 +34,5 @@ package() {
 
 md5sums=('583441a25f937360624024f2881e5ea8'
          'bf15619930dadf0c08669566e4aa809c'
-         '65f88b69cf3112b178725af121327765')
+         '65f88b69cf3112b178725af121327765'
+         'c4f6da682cb4e7599fede4904021f4ae')
