--- a/blender/trunk/PKGBUILD
+++ b/blender/trunk/PKGBUILD
@@ -13,7 +13,7 @@ _svn=true
 
 pkgname=blender
 pkgver=2.57b
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="A fully integrated 3D graphics creation suite"
 arch=('i686' 'x86_64')
@@ -50,6 +50,8 @@ build() {
   mkdir build
   cd build
 
+  [[ $CARCH == i686 ]] && ENABLESSE2="-DSUPPORT_SSE2_BUILD:BOOL=OFF"
+
   cmake .. \
     -DCMAKE_INSTALL_PREFIX:PATH=/usr \
     -DCMAKE_BUILD_TYPE:STRING=Release \
@@ -61,7 +63,8 @@ build() {
     -DPYTHON_VERSION:STRING=3.2 \
     -DPYTHON_LIBPATH:STRING=/usr/lib \
     -DPYTHON_LIBRARY:STRING=python3.2mu \
-    -DPYTHON_INCLUDE_DIRS:STRING=/usr/include/python3.2mu
+    -DPYTHON_INCLUDE_DIRS:STRING=/usr/include/python3.2mu \
+    $ENABLESSE2
 
   make $MAKEFLAGS
 
