upgpkg: neon 0.29.3-3 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@121086 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/neon/trunk/PKGBUILD
+++ b/neon/trunk/PKGBUILD
@@ -5,11 +5,11 @@
 # KEEP LIBTOOL FILES!
 pkgname=neon
 pkgver=0.29.3
-pkgrel=2
+pkgrel=3
 pkgdesc="HTTP and WebDAV client library with a C interface"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
-depends=('heimdal' 'expat' 'ca-certificates')
+depends=('krb5' 'expat' 'ca-certificates')
 url="http://www.webdav.org/neon/"
 source=("http://www.webdav.org/neon/${pkgname}-${pkgver}.tar.gz")
 md5sums=('ba1015b59c112d44d7797b62fe7bee51')
@@ -20,7 +20,7 @@ build() {
   ./configure --prefix=/usr \
     --with-expat --enable-shared --disable-static \
     --with-ssl=openssl --with-ca-bundle=/etc/ssl/certs/ca-certificates.crt
-  make || return 1
+  make
 }
 
 package() {
