--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdelibs
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
-depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'heimdal'
+depends=('strigi' 'attica' 'libxss' 'xz' 'openssl' 'soprano' 'krb5'
         'shared-desktop-ontologies' 'qca' 'libdbusmenu-qt' 'polkit-qt' 'grantlee'
         'shared-mime-info' 'enchant' 'giflib' 'jasper' 'openexr' 'xdg-utils'
         'phonon' 'hicolor-icon-theme' 'upower' 'udisks' 'libxcursor'
@@ -20,7 +20,7 @@ replaces=('arts' 'kdelibs-experimental')
 install='kdelibs.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kde-applications-menu.patch' 'archlinux-menu.patch' 'abs-syntax-highlight.patch')
-sha1sums=('b4794a9a69492ce4725abd9eb5d00d3a50e46603'
+sha1sums=('c7fb089c9d52a6b1d9188b9e788753373a3288e4'
           '86ee8c8660f19de8141ac99cd6943964d97a1ed7'
           '63a850ab4196b9d06934f2b4a13acd9f7739bc67'
           'd994f262356af5b9e4e9619646e471bd98c91efb')
