--- a/kdepimlibs/trunk/PKGBUILD
+++ b/kdepimlibs/trunk/PKGBUILD
@@ -3,18 +3,17 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepimlibs
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 pkgdesc="KDE PIM Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 depends=('kdelibs' 'gpgme' 'akonadi' 'libical' )
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'cyrus-sasl' 'openldap'
-        'docbook-xsl')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'cyrus-sasl' 'openldap')
 install='kdepimlibs.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('f3c78688203b90efabdd8961783e8f4d16d9c57c')
+sha1sums=('370b4e98ab9e1f8ba18d36630d5c8bbff8da4883')
 
 build() {
 	cd ${srcdir}
