--- a/kdebase-runtime/trunk/PKGBUILD
+++ b/kdebase-runtime/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-runtime
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 pkgdesc="KDE Base Runtime Environment"
 arch=('i686' 'x86_64')
@@ -11,14 +11,13 @@ url='http://www.kde.org'
 license=('GPL' 'LGPL')
 depends=('kdelibs' 'ntrack' 'smbclient' 'libssh' 'libcanberra' 'oxygen-icons'
         'xorg-xauth' 'hicolor-icon-theme')
-makedepends=('pkg-config' 'cmake' 'automoc4' 'kdepimlibs' 'openslp' 'xine-lib'
-        'docbook-xsl')
+makedepends=('pkg-config' 'cmake' 'automoc4' 'kdepimlibs' 'openslp' 'xine-lib')
 optdepends=('htdig: to build the search index in khelpcenter'
             'rarian: needed by khelpcenter'
             'gdb: drkonq crash handler')
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('d939d78f82e8c9d1257552abac08e4da1ff28c51')
+sha1sums=('75cf1993b42cbada44b8c3ca2d5b99e6ac48594c')
 
 build() {
 	cd "${srcdir}"
