--- a/kdegraphics/trunk/PKGBUILD
+++ b/kdegraphics/trunk/PKGBUILD
@@ -12,7 +12,7 @@ pkgname=('kdegraphics-gwenview'
          'kdegraphics-ksnapshot'
          'kdegraphics-libs'
          'kdegraphics-okular')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -20,9 +20,9 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdegraphics')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'qimageblitz' 'sane' 'lcms'
         'libxxf86vm' 'poppler-qt' 'libspectre' 'chmlib' 'djvulibre'
-        'ebook-tools' 'kdebase-runtime' 'docbook-xsl')
+        'ebook-tools' 'kdebase-runtime')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('9c9f31c88c1c9e6dcaa7fb177847402d874ffc94')
+sha1sums=('c16dc9c55e7459418fa9887aa532ea0a269e7179')
 
 build() {
 	cd ${srcdir}
