--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -7,15 +7,15 @@ pkgname=('kdebindings-csharp'
          'kdebindings-python'
          'kdebindings-ruby'
          'kdebindings-smoke')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
-	'kdegraphics-okular' 'qwt' 'docbook-xsl' 'boost' 'qscintilla' 'ruby')
+	'kdegraphics-okular' 'qwt' 'boost' 'qscintilla' 'ruby')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('eff4b5785b09958fffe4e23583f5af75c796aa9e')
+sha1sums=('4ecc6ac378c241472aa75680abfafd8d57672653')
 
 build() {
 	export MONO_SHARED_DIR="${srcdir}/build/.mono"
