--- a/kdebase-workspace/trunk/PKGBUILD
+++ b/kdebase-workspace/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-workspace
-pkgver=4.6.2
-pkgrel=2
+pkgver=4.6.3
+pkgrel=1
 pkgdesc="KDE Base Workspace"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -27,10 +27,8 @@ backup=('usr/share/config/kdm/kdmrc'
         'etc/pam.d/kscreensaver')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kdm-zsh-profile.patch' 'kdm' 'kde.pam' 'kde-np.pam' 'kscreensaver.pam'
-        'fixpath.patch' 'terminate-server.patch'
-        'shutdown-fix.patch'
-        'sensors-fix.patch')
-sha1sums=('63efb68733f347d0b7d24a7a061c5a0e3f84dee7'
+        'fixpath.patch' 'terminate-server.patch' 'nm-09.patch')
+sha1sums=('50103b7752defbab08965b665fa95361bb5b3ff6'
           '8c2bdefb23a03b753b78d16944d03fa3939d2d99'
           '5db3a245201bd4a50e65aa2ef583cf5490e4f646'
           'f7b38af38549242a240f1a90ab9964ca8a366129'
@@ -38,18 +36,14 @@ sha1sums=('63efb68733f347d0b7d24a7a061c5a0e3f84dee7'
           '106635aa1aae51d6f0668b1853f6c49a4fe9d3d8'
           'd7b5883f7e65c6839b1f65f94d58026673dd0226'
           'ac7bc292c865bc1ab8c02e6341aa7aeaf1a3eeee'
-          'c18422cb964e51d2cfcca3907904a361d507c8e1'
-          'fd6bb3239705c23d38f51fb39048b05ed6e95703')
+          '46259fe725e505aa8314407120f0aa9013823fa5')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
 	patch -p0 -i ${srcdir}/kdm-zsh-profile.patch
 	patch -p0 -i ${srcdir}/fixpath.patch
 	patch -p0 -i ${srcdir}/terminate-server.patch
-    patch -Np1 -i ${srcdir}/shutdown-fix.patch
-
-    # Already fixed upstream
-    patch -Np1 -i ${srcdir}/sensors-fix.patch
+    patch -p0 -i ${srcdir}/nm-09.patch
 
 	cd ${srcdir}
 	mkdir build
