--- a/kdebase/trunk/PKGBUILD
+++ b/kdebase/trunk/PKGBUILD
@@ -13,15 +13,15 @@ pkgname=('kdebase-dolphin'
          'kdebase-kwrite'
          'kdebase-lib'
          'kdebase-plasma')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdebase')
-makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4' 'docbook-xsl')
+makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('e9e46a6b4f5580996a1484da6d2ef17f418eec69')
+sha1sums=('69cfba74099cdce27f7f72725288f025979b41f3')
 
 build() {
 	cd ${srcdir}
