--- a/kdeaccessibility/trunk/PKGBUILD
+++ b/kdeaccessibility/trunk/PKGBUILD
@@ -10,16 +10,16 @@ pkgname=('kdeaccessibility-colorschemes'
          'kdeaccessibility-kmag'
          'kdeaccessibility-kmousetool'
          'kdeaccessibility-kmouth')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://accessibility.kde.org'
 license=('GPL' 'FDL')
 groups=('kde' 'kdeaccessibility')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime'
-        'speech-dispatcher' 'docbook-xsl')
+        'speech-dispatcher')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('5e8e92a312b2c995602a66cc775009839122053d')
+sha1sums=('8d4053defbf839fd428820d6d1659b6e46ab468a')
 
 build() {
 	cd ${srcdir}
