--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -7,17 +7,17 @@ pkgname=('kdeadmin-kcron'
          'kdeadmin-ksystemlog'
          'kdeadmin-kuser'
          'kdeadmin-system-config-printer-kde')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebindings-python'
-	    'system-config-printer-common' 'python2-qt' 'docbook-xsl')
+	    'system-config-printer-common' 'python2-qt')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'syslog-path.patch')
-sha1sums=('33d756b1cef42d272b617bfba400e9116b34f311'
+sha1sums=('141e8e794ebd5341940d2d22986b7376a2abefbf'
           '20095ce6e0f3e5b6800a7c6e52de6fddba62c031')
 
 build() {
