--- a/kdeartwork/trunk/PKGBUILD
+++ b/kdeartwork/trunk/PKGBUILD
@@ -13,16 +13,16 @@ pkgname=('kdeartwork-aurorae'
          'kdeartwork-styles'
          'kdeartwork-wallpapers'
          'kdeartwork-weatherwallpapers')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeartwork')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'xscreensaver' 'eigen' 'kdebase-workspace'
-	'docbook-xsl' 'kdegraphics-libs')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'xscreensaver' 'eigen'
+	     'kdebase-workspace' 'kdegraphics-libs')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('2a264081e50f2d2d78d98080db8f013f3148f9b2')
+sha1sums=('084834ac3c654ea24257d9ed407c2384bf5aa110')
 
 build() {
 	cd $srcdir
