--- a/kdegames/trunk/PKGBUILD
+++ b/kdegames/trunk/PKGBUILD
@@ -43,16 +43,16 @@ pkgname=('kdegames-bomber'
          'kdegames-libkmahjongg'
          'kdegames-lskat'
          'kdegames-palapeli')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdegames')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'ggz-client-libs'
-	'twisted' 'kdebindings-python' 'docbook-xsl')
+	'twisted' 'kdebindings-python')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('91ec7347488504931b4019182a3f2b91a60d8065')
+sha1sums=('472cb9541f389a8869a496f715d48587db568dda')
 
 build() {
 	cd $srcdir
