--- a/kdemultimedia/trunk/PKGBUILD
+++ b/kdemultimedia/trunk/PKGBUILD
@@ -10,25 +10,20 @@ pkgname=('kdemultimedia-dragonplayer'
          'kdemultimedia-kmix'
          'kdemultimedia-kscd'
          'kdemultimedia-mplayerthumbs')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdemultimedia')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'tunepimp'
-        'ffmpeg' 'mplayer' 'docbook-xsl' 'pulseaudio' 'libmusicbrainz3')
+        'ffmpeg' 'mplayer' 'pulseaudio' 'libmusicbrainz3')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
-        'mplayerthumbs.config'
-        'kmix-locale-pulseaudio.patch')
-sha1sums=('4447d26488e3b97c43580d86ad47cee77ff98578'
-          'ba016fa2563c14ffcba852c62506b66bfc6ee683'
-          '5aa443ace9f4b1906c227664b4e50bace666cf99')
+        'mplayerthumbs.config')
+sha1sums=('d5bde19156b65e9b56e0e6de800efc0efe117632'
+          'ba016fa2563c14ffcba852c62506b66bfc6ee683')
 
 build() {
-	cd ${srcdir}/${pkgbase}-${pkgver}
-    patch -Np0 -i ${srcdir}/kmix-locale-pulseaudio.patch
-
     cd ${srcdir}
 	mkdir build
 	cd build
