--- a/kdenetwork/trunk/PKGBUILD
+++ b/kdenetwork/trunk/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=('kdenetwork-filesharing'
          'kdenetwork-kppp'
          'kdenetwork-krdc'
          'kdenetwork-krfb')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -19,9 +19,9 @@ groups=('kde' 'kdenetwork')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'speex' 'ortp' 'libotr'
 	'qca-ossl' 'kdebase-workspace' 'kdebase-lib' 'libvncserver' 'libmsn'
 	'ppp' 'v4l-utils' 'libidn' 'rdesktop' 'qimageblitz' 'libxdamage' 'libgadu'
-	'telepathy-qt4' 'docbook-xsl' 'libktorrent')
+	'telepathy-qt4' 'libktorrent')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('6865c074b87a201b876d11b86a2f14aff5f45abb')
+sha1sums=('6f140dca442be815eda4fb79d51efd9e4588a1f1')
 
 build() {
     cd ${srcdir}
