--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -23,17 +23,17 @@ pkgname=('kdesdk-cervisia'
          'kdesdk-scripts'
          'kdesdk-strigi-analyzer'
          'kdesdk-umbrello')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdesdk')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'kdepim-runtime' 'subversion'
-        'docbook-xsl' 'antlr2' 'kdebase-konqueror')
+        'antlr2' 'kdebase-konqueror')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'fix-python2-path.patch')
-sha1sums=('d246f5571aa772d4a4d0538456b142799c17c146'
+sha1sums=('6faecbd828fda6cf0aced642287d982d3541d746'
           'd05ca0231869c484fd3861955d960a60aff7dcfb')
 
 build() {
