--- a/kdetoys/trunk/PKGBUILD
+++ b/kdetoys/trunk/PKGBUILD
@@ -6,15 +6,15 @@ pkgbase=kdetoys
 pkgname=('kdetoys-amor'
          'kdetoys-kteatime'
          'kdetoys-ktux')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdetoys')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'docbook-xsl')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('4619d2124abe0887ce5aca24f1333419f7cd88c5')
+sha1sums=('07eaf12ccabc9209bd5de6a3f0e4ff6c70fca8b0')
 
 build() {
 	cd $srcdir
