--- a/kdeutils/trunk/PKGBUILD
+++ b/kdeutils/trunk/PKGBUILD
@@ -16,7 +16,7 @@ pkgname=('kdeutils-ark'
          'kdeutils-printer-applet'
          'kdeutils-superkaramba'
          'kdeutils-sweeper')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -24,9 +24,9 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeutils')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-lib' 'kdebase-workspace'
 	'kdebindings-python' 'system-config-printer-common' 'libarchive' 'qimageblitz'
-	'docbook-xsl' 'qjson')
+	'qjson')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('621d77f8f75bdd867316768f48ea257829f7def1')
+sha1sums=('1aa735c03689ef49b949278ee31d0d8e8536b7d6')
 
 build() {
 	cd ${srcdir}
