--- a/kdewebdev/trunk/PKGBUILD
+++ b/kdewebdev/trunk/PKGBUILD
@@ -6,16 +6,16 @@ pkgname=('kdewebdev-kfilereplace'
          'kdewebdev-kimagemapeditor'
          'kdewebdev-klinkstatus'
          'kdewebdev-kommander')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdewebdev')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'ruby' 'tidyhtml' 'kdepim-runtime'
-	'docbook-xsl' 'boost')
+	'boost')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('80f709845fb871919fbb2c293d1cc8f40160509b')
+sha1sums=('39e72fbaf76ee1c685321c8c3a767c38e63bc2a9')
 
 build() {
 	cd $srcdir
