upgpkg: subversion 1.6.15-2 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@121110 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/subversion/trunk/PKGBUILD
+++ b/subversion/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=subversion
 pkgver=1.6.15
-pkgrel=1
+pkgrel=2
 pkgdesc="Replacement for CVS, another versioning system (SVN)"
 arch=('i686' 'x86_64')
 license=('apache' 'bsd')
 depends=('neon' 'apr-util')
-makedepends=('heimdal' 'apache' 'python2' 'perl' 'swig' 'ruby' 'java-runtime' 
+makedepends=('krb5' 'apache' 'python2' 'perl' 'swig' 'ruby' 'java-runtime' 
              'autoconf' 'sqlite3' 'db' 'e2fsprogs' 'libgnome-keyring' 'kdelibs')
 source=(http://subversion.tigris.org/downloads/$pkgname-$pkgver.tar.bz2
         svnserve svn svnserve.conf svnmerge.py
