--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,20 +1,19 @@
 # $Id$
+# Maintainer: Angel Velasquez <angvp@archlinux.org>  
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=python-cairo
-pkgver=1.8.10
-pkgrel=2
+pkgver=1.10.0
+pkgrel=1
 pkgdesc="Python bindings for the cairo graphics library"
 arch=('i686' 'x86_64')
 license=('LGPL3')
 depends=('python' 'cairo')
 makedepends=('pkg-config')
 options=('!libtool')
-source=(http://cairographics.org/releases/pycairo-${pkgver}.tar.bz2
-        pycairo-1.8.10-pypath.patch)
+source=(http://cairographics.org/releases/pycairo-${pkgver}.tar.bz2)
 url="http://www.cairographics.org/pycairo"
-md5sums=('ddc544943d791e3c22ca8f019e10e1e3'
-         '047cfe0a98cfa73a156cd70e70082325')
+md5sums=('e6fd3f2f1e6a72e0db0868c4985669c5')
 
 build() {
   cd "${srcdir}/pycairo-${pkgver}"
@@ -31,7 +30,6 @@ build() {
 
   # Patch the unpacked version of waf:
   pushd .waf3*
-  patch -Np0 -i ../../pycairo-1.8.10-pypath.patch
   popd
 
   ./waf configure --prefix=/usr
