--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,26 +3,26 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgbase=mesa
-pkgname=('mesa' 'libgl' 'libgles' 'libegl' 'ati-dri' 'intel-dri' 'unichrome-dri' 'mach64-dri' 'mga-dri' 'r128-dri' 'savage-dri' 'sis-dri' 'tdfx-dri' 'nouveau-dri')
+pkgname=('mesa' 'libgl' 'libgles' 'libegl' 'ati-dri' 'intel-dri' 'unichrome-dri' 'mach64-dri' 'mga-dri' 'r128-dri' 'savage-dri' 'sis-dri' 'tdfx-dri' 'nouveau-dri') # 'llvm-dri')
 
 _git=true
 #_git=false
 
 if [ "${_git}" = "true" ]; then
-    pkgver=7.10.99.git20110412
+    pkgver=7.10.99.git20110429
   else
     pkgver=7.10.2
 fi
 pkgrel=1
 arch=('i686' 'x86_64')
 makedepends=('glproto>=1.4.12' 'pkgconfig' 'libdrm>=2.4.25' 'libxxf86vm>=1.1.1' 'libxdamage>=1.1.3' 'expat>=2.0.1' 'libx11>=1.4.3' 'libxt>=1.1.1' 
-             'gcc-libs>=4.5' 'dri2proto=2.3' 'python2' 'libxml2' 'imake')
+             'gcc-libs>=4.5' 'dri2proto=2.3' 'python2' 'libxml2' 'imake' 'llvm')
 url="http://mesa3d.sourceforge.net"
 license=('custom')
 source=(LICENSE gnome-shell-shader-fix.patch nouveau-fix-header.patch)
 if [ "${_git}" = "true" ]; then
-	# mesa git shot from 7.11 branch - see for state: http://cgit.freedesktop.org/mesa/mesa/commit/?id=f05751aa2af1a8ec83c2d110385aab1b7e735238
-	source=(${source[@]} 'ftp://ftp.archlinux.org/other/mesa/mesa-f05751aa2af1a8ec83c2d110385aab1b7e735238.tar.bz2')
+	# mesa git shot from 7.11 branch - see for state: http://cgit.freedesktop.org/mesa/mesa/commit/?id=608a4a17feea9fba2812d4e5c01dd6dbadc5d6e0
+	source=(${source[@]} 'ftp://ftp.archlinux.org/other/mesa/mesa-608a4a17feea9fba2812d4e5c01dd6dbadc5d6e0.tar.bz2')
   else
 	source=(${source[@]} "ftp://ftp.freedesktop.org/pub/mesa/${pkgver}/MesaLib-${pkgver}.tar.bz2"
 )
@@ -30,7 +30,7 @@ fi
 md5sums=('5c65a0fe315dd347e09b1f2826a1df5a'
          '3ec78f340f9387abd7a37b195e764cbf'
          '67c87b77cc2236b52a3b47dad3fbb5d4'
-         '56d8862d1155f7e8054f9aa7f93ebebc')
+         '8d1a895110a6d3b7c51b3521f794bae2')
 
 build() {
 if [ "${_git}" = "true" ]; then
@@ -50,19 +50,27 @@ fi
 if [ "${_git}" = "true" ]; then
     ./autogen.sh --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
-    --enable-gallium-radeon \
+    --enable-gallium-r300 \
     --enable-gallium-r600 \
     --enable-gallium-nouveau \
+    --enable-gallium-llvm \
+    --enable-gallium-egl \
     --enable-gallium-swrast \
     --enable-glx-tls \
     --with-driver=dri \
     --enable-xcb \
-    --with-state-trackers=dri,glx \
+    --with-state-trackers=dri,glx,egl \
     --disable-glut \
     --enable-gles1 \
     --enable-gles2 \
-    --enable-egl \
-    --disable-gallium-egl
+    --enable-egl 
+    #    --enable-gallium-svga \
+
+    # --enable-texture-float (enable floating-point textures and renderbuffers) - http://www.phoronix.com/scan.php?page=news_item&px=OTMzMg
+    #The source code to implement ARB_texture_float extension is included and can be toggled on at compile time only by those who purchased a license from SGI, or are in a country where the patent does not apply.
+
+    #--enable-shared-dricore - http://bugs.gentoo.org/show_bug.cgi?id=357177
+    
   else
     ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
@@ -142,7 +150,8 @@ package_libegl() {
   pkgdesc="Mesa libEGL libraries and headers"
 
 if [ "${_git}" = "true" ]; then
-    cd ${srcdir}/mesa-*   
+    cd ${srcdir}/mesa-*  
+    make -C src/gallium/targets/egl DESTDIR="${pkgdir}" install
   else
     cd "${srcdir}/Mesa-${pkgver}" 
 fi
@@ -168,6 +177,7 @@ fi
   install -m755 -d "${pkgdir}/usr/share/licenses/libegl"
   install -m644 "${srcdir}/LICENSE" "${pkgdir}/usr/share/licenses/libegl/"
 }
+
 package_mesa() {
   depends=('libgl' 'libx11>=1.4.3' 'libxt>=1.1.1' 'gcc-libs>=4.5' 'dri2proto=2.3' 'libdrm>=2.4.25' 'glproto>=1.4.12')
   optdepends=('opengl-man-pages: for the OpenGL API man pages')
@@ -346,3 +356,21 @@ if [ "${_git}" = "true" ]; then
 fi
 }
 
+#package_llvm-dri() {
+#  depends=("libgl=${pkgver}")
+#  pkgdesc="Mesa common LLVM support"
+
+#if [ "${_git}" = "true" ]; then
+#    cd ${srcdir}/mesa-*/src/gallium
+#  else
+#    cd "${srcdir}/Mesa-${pkgver}/src/gallium"
+#fi
+
+  # gallium llvmpipe
+#if [ "${_git}" = "true" ]; then
+#    make -C drivers/llvmpipe DESTDIR="${pkgdir}" install
+#    #make -C targets/dri-swrast DESTDIR="${pkgdir}" install
+#  else
+#    make -C ${srcdir}/Mesa-${pkgver}/src/gallium/targets/dri-nouveau DESTDIR="${pkgdir}" install
+#fi
+#}
