--- a/claws-mail/trunk/PKGBUILD
+++ b/claws-mail/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=claws-mail
 pkgver=3.7.9
-pkgrel=1
+pkgrel=2
 pkgdesc="A GTK+ based e-mail client."
 arch=('i686' 'x86_64')
 license=('GPL3')
 url="http://www.claws-mail.org"
 depends=('gtk2' 'gnutls' 'startup-notification' 'pilot-link' 'enchant'
-         'gpgme' 'libetpan' 'libsm' 'db' 'dbus-glib' 'hicolor-icon-theme')
+         'gpgme' 'libetpan' 'libsm' 'db' 'dbus-glib' 'hicolor-icon-theme' 'desktop-file-utils')
 makedepends=('compface' 'spamassassin' 'bogofilter' 'valgrind')
 optdepends=('python2:           needed for some tools'
             'perl:              needed for some tools'
