--- a/wireshark/trunk/PKGBUILD
+++ b/wireshark/trunk/PKGBUILD
@@ -4,10 +4,10 @@
 pkgname=(wireshark-cli wireshark-gtk)
 pkgbase=wireshark
 pkgver=1.4.6
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('GPL2')
-makedepends=('bison' 'flex' 'gtk2' 'heimdal' 'libpcap' 'bash' 'gnutls' 'libcap')
+makedepends=('bison' 'flex' 'gtk2' 'krb5' 'libpcap' 'bash' 'gnutls' 'libcap')
 url="http://www.wireshark.org/"
 options=(!libtool)
 source=(http://www.wireshark.org/download/src/${pkgbase}-${pkgver}.tar.bz2)
@@ -23,7 +23,7 @@ build() {
 
 package_wireshark-cli() {
   pkgdesc="A free network protocol analyzer for Unix/Linux and Windows - CLI version"
-  depends=('heimdal' 'libpcap' 'bash' 'gnutls' 'libcap' 'glib2')
+  depends=('krb5' 'libpcap' 'bash' 'gnutls' 'libcap' 'glib2')
   install=wireshark.install
   conflicts=(wireshark)
 
