upgpkg: nss_ldap 265-2 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@121171 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nss_ldap/trunk/PKGBUILD
+++ b/nss_ldap/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=nss_ldap
 pkgver=265
-pkgrel=1
+pkgrel=2
 pkgdesc="The nss_ldap module provides the means for Linux and Solaris workstations to resolve the entities defined in RFC 2307 from LDAP directories."
 arch=(i686 x86_64)
 url="http://www.padl.com/OSS/nss_ldap.html"
 license=('LGPL')
-depends=('libldap>=2.4.18' 'heimdal>=1.2.1')
+depends=('libldap>=2.4.18' 'krb5')
 backup=("etc/nss_ldap.conf")
 source=(http://www.padl.com/download/${pkgname}-${pkgver}.tar.gz)
 md5sums=('c1cb02d1a85538cf16bca6f6a562abe4')
