upgpkg: claws-mail-extra-plugins 3.7.9-3 fix libnotify usage FS#23724
git-svn-id: file:///srv/repos/svn-packages/svn@121174 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/claws-mail-extra-plugins/trunk/PKGBUILD
+++ b/claws-mail-extra-plugins/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=claws-mail-extra-plugins
 pkgver=3.7.9
-pkgrel=2
+pkgrel=3
 pkgdesc="Extra plugins for claws-mail"
 url="http://www.claws-mail.org/plugins.php?branch=EXT"
 license=('GPL3')
@@ -30,11 +30,11 @@ conflicts=('claws-gtkhtml2_viewer' 'claws-mail-acpinotifier-plugin'
            'sylpheed-claws-extra-plugins' 'claws-tnef-plugin'
            'claws-webkit-plugin-svn' 'claws-mayflower-plugin-svn')
 replaces=('sylpheed-claws-extra-plugins')
-options=('!libtool')
+options=('!libtool' '!strip')
 source=(http://downloads.sourceforge.net/project/sylpheed-claws/extra%20plugins/$pkgver/claws-mail-extra-plugins-$pkgver.tar.bz2
         claws-mail-notification-0.26-libnotify-0.7.patch)
 md5sums=('3d1ebc48f686ab10702380c776b5d5d0'
-         'b76e1cdbff7af46d6594c34646c06fd0')
+         'a02be84594ebd28b18811ccc358509be')
 
 build() {
   cd "$srcdir/claws-mail-extra-plugins-$pkgver"
@@ -47,7 +47,7 @@ build() {
       cd $dir
 
       [[ $dir == notification_plugin-* ]] &&
-        patch -Np0 -i "$srcdir/claws-mail-notification-0.26-libnotify-0.7.patch"
+        patch -Np2 -i "$srcdir/claws-mail-notification-0.26-libnotify-0.7.patch"
 
       ./configure --prefix=/usr --disable-static
       make
