--- a/tzdata/trunk/PKGBUILD
+++ b/tzdata/trunk/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=tzdata
-pkgver=2011f
+pkgver=2011g
 pkgrel=1
-_tzcode=2011e
-_tzdata=2011f
+_tzcode=2011g
+_tzdata=2011g
 pkgdesc="Sources for time zone and daylight saving time data"
 arch=('i686' 'x86_64')
 url="http://www.twinsun.com/tz/tz-link.htm"
@@ -17,8 +17,8 @@ options=('!emptydirs')
 source=(ftp://elsie.nci.nih.gov/pub/tzcode${_tzcode}.tar.gz \
         ftp://elsie.nci.nih.gov/pub/${pkgname}${_tzdata}.tar.gz \
         Makefile.patch)
-md5sums=('fbfc05dbf9ebcfe7c4bba18549870173'
-         'cc8136284ae1e6c720a18e0f080242e0'
+md5sums=('ecb564279b28c5b184421c525d997d6c'
+         'a068c27e7e426fdb12ab0c88506df20d'
          'a64ed97d1fc03c66ee8612c0d9f40507')
 
 build() {
