--- a/soprano/trunk/PKGBUILD
+++ b/soprano/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=soprano
 pkgver=2.6.0
-pkgrel=4
+pkgrel=5
 pkgdesc='A library which provides a highly usable object-oriented C++/Qt4 framework for RDF data'
 arch=('i686' 'x86_64')
 url='http://soprano.sourceforge.net/'
 license=('GPL' 'LGPL')
-depends=('qt' 'clucene' 'redland-storage-virtuoso' 'libiodbc')
+depends=('qt' 'clucene' 'redland-storage-virtuoso' 'libiodbc' 'virtuoso')
 makedepends=('cmake' 'openjdk6' 'doxygen')
 source=("http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('03ae49e87c6ec99e57d0433c2650846f')
