drop theme dependency
git-svn-id: file:///srv/repos/svn-packages/svn@121195 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gsettings-desktop-schemas/trunk/PKGBUILD
+++ b/gsettings-desktop-schemas/trunk/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=gsettings-desktop-schemas
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Shared GSettings schemas for the desktop"
 arch=('any')
 url="http://live.gnome.org/"
 license=('GPL')
-depends=('gnome-themes-standard')
+depends=('glib2')
 makedepends=('intltool')
 install=$pkgname.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.0/${pkgname}-${pkgver}.tar.bz2)
