--- a/xulrunner/trunk/PKGBUILD
+++ b/xulrunner/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 # Contributor: Alexander Baldeck <alexander@archlinux.org>
 pkgname=xulrunner
-pkgver=2.0
-_ffoxver=4.0
+pkgver=2.0.1
+_ffoxver=4.0.1
 pkgrel=1
 pkgdesc="Mozilla Runtime Environment"
 arch=('i686' 'x86_64')
@@ -18,11 +18,11 @@ source=(http://releases.mozilla.org/pub/mozilla.org/firefox/releases/${_ffoxver}
         xulrunner-omnijar.patch
         port_gnomevfs_to_gio.patch)
 options=('!emptydirs')
-md5sums=('3468a2c463b4fc2788ba621e4b511c30'
+md5sums=('9abda7d23151e97913c8555a64c13f34'
          '2358a2ddd35bcdd62ff42442dfe548d9'
          '639ea80e823543dd415b90c0ee804186'
          'a0236f6c3e55f60b7888d8cf137ff209'
-         'dea8c2a57a588bf5f6198ce7b4155655'
+         '0bf82bc6677e3ce57fd20a147fe8d7b1'
          '42f83468b296452fb754a81a4317ca64')
 build() {
   cd "${srcdir}/mozilla-2.0"
@@ -42,6 +42,8 @@ build() {
 
   unset CFLAGS
   unset CXXFLAGS
+
+  export CXXFLAGS="-fpermissive"
 
   make -j1 -f client.mk build MOZ_MAKE_FLAGS="$MAKEFLAGS"
 }
