upgpkg: libgcrypt 1.4.6-3 make it pick up the install file, FS#23993
git-svn-id: file:///srv/repos/svn-packages/svn@121250 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libgcrypt/trunk/PKGBUILD
+++ b/libgcrypt/trunk/PKGBUILD
@@ -3,13 +3,14 @@
 
 pkgname=libgcrypt
 pkgver=1.4.6
-pkgrel=2
+pkgrel=3
 pkgdesc="a general purpose crypto library based on the code used"
 arch=(i686 x86_64)
 url="http://www.gnupg.org"
 license=('LGPL')
 depends=('libgpg-error>=1.9')
-options=(!libtool)
+options=('!libtool' '!emptydirs')
+install=$pkgname.install
 source=(ftp://ftp.gnupg.org/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2
 	#ftp://ftp.franken.de/pub/crypt/mirror/ftp.gnupg.org/gcrypt/libgcrypt/${pkgname}-${pkgver}.tar.bz2
 )
