--- a/idnkit/trunk/PKGBUILD
+++ b/idnkit/trunk/PKGBUILD
@@ -29,4 +29,5 @@ package() {
 	cd "${srcdir}/idnkit-${pkgver}-src"
 	make DESTDIR="${pkgdir}" install
 	install -Dm644 LICENSE.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+	rm "${pkgdir}"/etc/*.sample
 }
