partially addresses FS#23877, remove prefix from filenames
git-svn-id: file:///srv/repos/svn-packages/svn@121277 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/inkscape/trunk/PKGBUILD
+++ b/inkscape/trunk/PKGBUILD
@@ -1,6 +1,7 @@
 # $Id$
-# Maintainer: tobias <tobias@archlinux.org>
+# Contributor: tobias <tobias@archlinux.org>
 # Contributor: Tobias Kieslich <tobias@justdreams.de>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=inkscape
 pkgver=0.48.1
@@ -13,11 +14,13 @@ makedepends=('boost' 'pkg-config' 'intltool')
 depends=('gc' 'gtkmm' 'poppler-glib' 'pyxml' 'libxslt' 'gsl' 'popt' 'python2'
          'gtkspell' 'imagemagick' 'desktop-file-utils' 'hicolor-icon-theme')
 optdepends=('python2-numpy: some extensions'
-            'python-lxml: some extensions and filters')
+            'python-lxml: some extensions and filters'
+            'uniconvertor: reading/writing to some proprietary formats')
 options=('!libtool')
-install=inkscape.install
 source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz")
 sha1sums=('a43467119925aee70d1d63d746f9846abb4dea91')
+
+install=install
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
