--- a/gcin/trunk/PKGBUILD
+++ b/gcin/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 # Contributor: damir <damir@archlinux.org>
-# Maintainer: Gaetan Bisson <bisson@archlinux.org>
 
 pkgname=gcin
-pkgver=1.6.0
+pkgver=1.6.1
 pkgrel=1
 pkgdesc='Input method server supporting various input methods'
 arch=('i686' 'x86_64')
@@ -16,7 +16,7 @@ optdepends=('qt: support for qt4 input method')
 source=("${url}download/${pkgname}-${pkgver}.tar.bz2"
         'fix_x86_64_libdir.patch'
         'fix_qt4_paths.patch')
-sha1sums=('72d05f85e0cd410420eef539e034167172b8c34c'
+sha1sums=('acbfffbaf7eccd32ef251493e8c03dd126023b51'
           'e5c113e50420bf4750f5547641df6ec4b7e437e0'
           '16d004424caed541d5baaa6874f708b1c138ab08')
 
@@ -24,8 +24,8 @@ install=install
 
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
-	patch -p1 -i "${srcdir}/fix_x86_64_libdir.patch"
-	patch -p1 -i "${srcdir}/fix_qt4_paths.patch"
+	patch -p1 -i ../fix_x86_64_libdir.patch
+	patch -p1 -i ../fix_qt4_paths.patch
 	./configure --prefix=/usr --use_i18n=Y
 	make
 }
