--- a/gcin/trunk/PKGBUILD
+++ b/gcin/trunk/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=1
 pkgdesc='Input method server supporting various input methods'
 arch=('i686' 'x86_64')
 license=('LGPL')
-url='http://www.csie.nctu.edu.tw/~cp76/gcin/'
+url='http://cle.linux.org.tw/gcin/download/'
 depends=('gtk2' 'libxtst')
 makedepends=('anthy' 'qt')
 optdepends=('qt: support for qt4 input method')
