languages should depend on firefox. FS#23668
git-svn-id: file:///srv/repos/svn-packages/svn@121327 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/firefox-i18n/trunk/PKGBUILD
+++ b/firefox-i18n/trunk/PKGBUILD
@@ -90,7 +90,7 @@ pkgrel=1
 arch=('any')
 license=('MPL')
 url="http://www.mozilla.com/"
-makedepends=("firefox>=${pkgver}")
+depends=("firefox>=${pkgver}")
 _url=ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/$pkgver/linux-i686/xpi
 
 source=(firefox-i18n-$pkgver-af.xpi::$_url/af.xpi
