fix exit code. FS#21421 upstream didn't care to include this crucial bug in 3.0.1
git-svn-id: file:///srv/repos/svn-packages/svn@121328 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-terminal/trunk/PKGBUILD
+++ b/gnome-terminal/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=gnome-terminal
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="The GNOME Terminal Emulator"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -16,11 +16,14 @@ options=('!emptydirs')
 url="http://www.gnome.org"
 groups=('gnome')
 install=gnome-terminal.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.0/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('388eda40663566cb785e2d92180e0b584c2c89acc3e7bcd30605601710fddc48')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.0/${pkgname}-${pkgver}.tar.bz2
+        exitcode.patch)
+sha256sums=('388eda40663566cb785e2d92180e0b584c2c89acc3e7bcd30605601710fddc48'
+            '263030e9905329d8e651421b575a80c37e30733373378896c94d2c6d6e0ee056')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i "${srcdir}/exitcode.patch"
   ./configure --prefix=/usr --sysconfdir=/etc \
       --localstatedir=/var --disable-scrollkeeper \
       --with-gtk=3.0
