add gtk3 to dependency
git-svn-id: file:///srv/repos/svn-packages/svn@121987 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/evince/trunk/PKGBUILD
+++ b/evince/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=evince
 pkgver=3.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Simply a document viewer"
 url="http://projects.gnome.org/evince/"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libspectre' 'gsfonts' 'poppler-glib' 'djvulibre' 'gnome-icon-theme'
+depends=('gtk3' 'libspectre' 'gsfonts' 'poppler-glib' 'djvulibre' 'gnome-icon-theme'
          't1lib' 'libgnome-keyring' 'desktop-file-utils' 'dconf' 'gsettings-desktop-schemas')
 makedepends=('gnome-doc-utils' 'nautilus' 'texlive-bin' 'intltool' 'gobject-introspection')
 optdepends=('texlive-bin: DVI support')
